# blender-studio-tools

./: .gitattributes  .gitignore  .gitmodules  AUTHORS.rst  HISTORY.md  HISTORY.rst  LICENSE  README.md  README.rst  __init__.py  bone_gizmo.py  bone_gizmo_group.py  bone_gizmo_properties.py  bone_gizmo_ui.py  install.sh  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
anim-cupboard/: README.md
anim_setup/: README.md  __init__.py  asglobals.py  kitsu.py  log.py  ops.py  opsdata.py  prefs.py  props.py  pyproject.toml  ui.py
blender-svn/: .gitignore  README.md  pyproject.toml
blender-svn/blender_svn/: __init__.py  background_process.py  client.py  constants.py  execute_subprocess.py  filebrowser.py  ops.py  opsdata.py  prefs.py  props.py  svn_commit.py  svn_log.py  svn_status.py  svn_update.py  timers.py  ui.py  util.py
blender-svn/blender_svn/svn/: admin.py  common.py  common_base.py  local.py  remote.py  test_support.py  utility.py
blender-svn/blender_svn/wheels/: __init__.py  blender_asset_tracer-1.11-py3-none-any.whl  blender_asset_tracer-1.12-py3-none-any.whl  svn-1.0.1-py2.py3-none-any.whl
blender-svn/tests/: test_blender_svn.py
blender_kitsu/: __init__.py  auth.py  bkglobals.py  cache.py  checkstrip.py  exception.py  logger.py  models.py  ops.py  ops_anim.py  ops_anim_data.py  ops_auth.py  ops_context.py  ops_context_data.py  ops_generic.py  ops_sqe.py  ops_sqe_data.py  opsdata.py  prefs.py  props.py  propsdata.py  pull.py  push.py  pyproject.toml  types.py  ui.py  util.py
blender_kitsu/anim/: __init__.py  ops.py  opsdata.py  ui.py
blender_kitsu/auth/: __init__.py  ops.py  ui.py
blender_kitsu/context/: __init__.py  ops.py  opsdata.py  ui.py
blender_kitsu/filetrees/: filetree_default.py
blender_kitsu/gazu/: __init__.py  client.py  context.py  encoder.py  entity.py  exception.py  person.py  playlist.py  scene.py  shot.py  sync.py  task.py  user.py
blender_kitsu/generic/: __init__.py  ops.py
blender_kitsu/lookdev/: __init__.py  ops.py  opsdata.py  prefs.py  props.py  ui.py
blender_kitsu/playblast/: __init__.py  core.py  ops.py  opsdata.py  ui.py
blender_kitsu/rdpreset/: __init__.py  ops.py  opsdata.py  prefs.py  props.py  ui.py
blender_kitsu/shot_builder/: __init__.py  operators.py  project.py  task_type.py
blender_kitsu/shot_builder/anim_setup/: core.py  ops.py
blender_kitsu/shot_builder/builder/: __init__.py  build_step.py  init_asset.py  init_shot.py  save_file.py
blender_kitsu/sqe/: __init__.py  checksqe.py  checkstrip.py  draw.py  ops.py  opsdata.py  pull.py  push.py  ui.py
blender_kitsu/tasks/: __init__.py  ops.py  opsdata.py  ui.py
grease_converter/: README.md  pyproject.toml
pose-shape-keys/: README.md  package.sh  pyproject.toml
pose-shape-keys/pose_shape_keys/: __init__.py  pose_key.py  ui.py
render_review/: LICENSE  README.md  __init__.py  checksqe.py  contactsheet.py  draw.py  exception.py  geo.py  geo_seq.py  kitsu.py  log.py  ops.py  opsdata.py  prefs.py  props.py  pyproject.toml  ui.py  util.py  vars.py
(+760 files in other folders)
