[tool.poetry]
name = "grease-converter"
version = "0.1.0"
description = ""
authors = ["Paul Golter <paul@blender.org>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.12.2"
black = "^21.12b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
