[tool.poetry]
name = "crazy_shape_keys"
version = "0.1.0"
description = ""
authors = ["Demeter Dzadik <demeter@blender.studio>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
